# alertamiento-sismico

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  skills-lock.json
api/: Dockerfile  alembic.ini  pyproject.toml  ruff.toml
api/migrations/: env.py
api/migrations/versions/: 0001_initial_schema.py  0002_ingest_support.py  0003_gov_ack_lock.py  0004_live_notify.py  0005_notification_jobs.py  0006_commands.py  0007_billing_meters.py  0008_cagg_secure_views.py  0009_site_status.py  0010_sensor_calibration.py  0011_soc_polish.py  0012_audit_read_index.py  0013_command_self_test.py  0014_notification_jobs_action.py  0015_drills.py  0016_notification_retry.py  0017_visibility_grants.py  0018_mobile_core.py  0019_push_endpoints.py  0020_checkin_notify.py
api/scripts/: dev_auth_env.py  export_openapi.py  fake_ingest.py  seed_timeseries.py
api/src/takab_api/: audit.py  felt.py  main.py  settings.py
api/src/takab_api/auth/: __init__.py  claims.py  deps.py  jwks.py  matrix.py  tokens.py
api/src/takab_api/backfill/: __init__.py  __main__.py  consumer.py  grants.py  objects.py
api/src/takab_api/billing/: __init__.py  __main__.py  meters.py
api/src/takab_api/commands/: __init__.py  __main__.py  intent.py  keys.py  publisher.py  service.py  signing.py  sync.py  worker.py
api/src/takab_api/contracts/: __init__.py  loader.py  meta.py
api/src/takab_api/db/: __init__.py  engine.py  pool.py  session.py
api/src/takab_api/dictamen/: __init__.py  pdf.py  rules.py  service.py
api/src/takab_api/incident/: __init__.py  __main__.py  engine.py  fail_open.py  lifecycle.py  quorum.py  transitions.py
api/src/takab_api/ingest/: __main__.py  consumer.py  handlers.py  registry.py
api/src/takab_api/notify/: __init__.py  __main__.py  config.py  orchestrator.py  plan.py  providers.py  push.py  worker.py
api/src/takab_api/queries/: __init__.py  audit.py  commands.py  dictamens.py  events.py  exports.py  fleet.py  incidents.py  mobile.py  reports.py  rule_sets.py  sensors.py  sites.py  telemetry.py  tenants.py  visibility.py
api/src/takab_api/routers/: __init__.py  _common.py  (+25 more)
api/tests/: _telemetry_fixtures.py  auth_utils.py  conftest.py  test_append_only.py  test_contracts_loader.py  test_db_session.py  test_felt.py  test_gov_operator.py  test_health.py  test_idempotency.py  test_ingest_consumer.py  test_ingest_e2e.py  test_ingest_handlers.py  test_ingest_registry.py  test_migration_0002.py  test_migration_0005.py  test_migration_0006.py  test_migration_0007.py  test_migration_0011.py  test_rls_isolation.py  test_settings.py  test_timescale_jobs.py  test_visibility_grants.py
api/tests/api/: conftest.py  test_audit.py  test_calibration.py  test_catalog.py  test_command_intent.py  test_commands_router.py  test_dictamens.py  test_drills.py  test_events.py  test_exports.py  test_features_by_channel.py  test_fleet.py  test_fleet_admin.py  test_fleet_config_state.py  test_forensic_evidence.py  test_incidents.py  test_incidents_dictamen_request.py  test_incidents_epicenter.py  test_me_profile.py  test_mobile_core.py  test_panic_quorum.py  test_reports.py  test_rule_sets.py  test_s3_seam.py  test_sensors.py  test_sites.py  test_telemetry.py  test_tenants.py  test_visibility_router.py
api/tests/auth/: conftest.py  test_auth_e2e.py  test_claims.py  test_cognito_write_attributes.py  test_dev_token.py  test_dual_issuer.py  test_gov_ack.py  test_guc_propagation.py  test_matrix.py  test_me.py  test_role_matrix.py  test_tokens.py
api/tests/backfill/: test_grants.py  test_objects.py
api/tests/billing/: test_meters.py
api/tests/commands/: test_ack_ingest.py  test_keys.py  test_signing_vectors.py  test_sync.py
api/tests/contracts/: conftest.py  test_audit_single_writer.py  test_caggs_join.py  test_compliance_retention.py  test_downlink_contracts.py  test_runtime_deps.py  test_waveform_view.py
api/tests/dictamen/: test_pdf.py  test_rules.py  test_service.py
api/tests/incident/: test_engine.py  test_engine_e2e.py  test_fail_open.py  test_lifecycle.py  test_quorum.py  test_ssn_validation.py  test_transitions.py
api/tests/notify/: test_orchestrator.py  test_plan.py  test_providers.py  test_push.py
api/tests/perf/: conftest.py  test_dashboard_p95.py
api/tests/ws/: _wsutil.py  conftest.py  test_ws_auth.py  test_ws_authz.py  test_ws_incidents.py  test_ws_isolation.py  test_ws_poller_lifecycle.py  test_ws_robustness.py
api/tools/: quorum_ssn_validation.py
edge/: README.md  pyproject.toml  ruff.toml
edge/scripts/: gen_siren.py
edge/simulators/: __init__.py  bacnet.py  fleet.py  mqtt.py  quake.py  rs4d.py  wr1.py
edge/systemd/: takab-edge.service  takab-gpio.service
edge/takab_edge/: __init__.py  contracts.py  evidence.py  module.py  schemas.py  supervisor.py
edge/takab_edge/actuators/: __init__.py
edge/takab_edge/audio/: __init__.py
edge/takab_edge/backfill/: __init__.py
edge/takab_edge/buffer/: __init__.py
edge/takab_edge/cloud/: __init__.py
edge/takab_edge/config/: __init__.py  settings.py  store.py
edge/takab_edge/dispatch/: __init__.py
edge/takab_edge/drill/: __init__.py
edge/takab_edge/gpio/: __init__.py  __main__.py
edge/takab_edge/health/: __init__.py
edge/takab_edge/local_api/: __init__.py  index.html
edge/takab_edge/rules/: __init__.py
edge/takab_edge/security/: __init__.py
edge/takab_edge/seedlink/: __init__.py
edge/takab_edge/signal/: __init__.py
edge/takab_edge/telemetry/: __init__.py
edge/tests/: conftest.py  test_actuators.py  test_audio.py  test_aws_transport.py  test_backfill.py  test_buffer.py  test_cloud.py  test_config.py  test_contracts.py  test_dispatch.py  test_drill.py  test_e2e.py  test_evidence.py  test_fleet_sim.py  test_gpio.py  test_gpio_process.py  test_health.py  test_health_probes.py  test_hmac_vectors.py  test_local_api.py  test_pin_factory.py  test_rules.py  test_schemas.py  test_security.py  test_seedlink.py  test_seedlink_hardware.py  test_signal.py  test_signal_hardware.py  test_simulators.py  test_supervisor.py  test_supervisor_cloud_wiring.py  test_telemetry.py
(+523 files in other folders)
