[project]
name = "takab-api"
version = "0.1.0"
description = "TAKAB API — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "boto3>=1.43.41",
    "jsonschema>=4.26.0",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.9",
    # [T-2.09] Verificación de firmas de INTENCIÓN (device_keys, EC/RSA).
    # Ya venía por pyjwt[crypto]; se declara directa porque commands/intent.py
    # la importa a nivel de módulo.
    "cryptography>=43",
    "fpdf2>=2.8.7",
    # RUNTIME, no dev: `notify/providers.py` lo importa a nivel de módulo para el canal
    # webhook. Estaba solo en el extra `dev`, así que el worker `notify` moría al
    # arrancar en cualquier despliegue real (descubierto ejecutando la imagen, T-1.37).
    "httpx>=0.27",
]

[project.optional-dependencies]
# Instalación canónica de dev: `pip install -e ".[dev]"` (Makefile y CI).
# Mantener en espejo con [dependency-groups] dev (pip NO instala grupos PEP 735).
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "moto[s3,sqs,ses]>=5.2.2",
    "pytest-asyncio>=1.4.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
# ../demo/tests (T-1.47): la guardia anti-TRUNCATE-remoto de la demo corre con la
# suite del api — vive fuera porque demo/ no es un paquete instalable.
testpaths = ["tests", "../demo/tests"]
asyncio_mode = "auto"
markers = [
    "perf: pruebas de rendimiento (p95/EXPLAIN). Excluidas de la suite normal (skip salvo TAKAB_RUN_PERF=1); correr con `-m perf` contra una DB dedicada sembrada.",
]

# Espejo del extra dev para flujos uv (`uv sync` instala este grupo, no el extra).
[dependency-groups]
dev = [
    "moto[s3,sqs,ses]>=5.2.2",
    "pytest-asyncio>=1.4.0",
]
